k8s/ingress/test-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-test
  template:
    metadata:
      labels:
        app: echo-test
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=ok"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-test-svc
spec:
  selector:
    app: echo-test
  ports:
    - port: 80
      targetPort: 5678
